# diana

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  INSTALL  Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac  debian_bdiana_xenial  diana.sh  diana.todo  dianaPROFF.sh  dianaTEST.sh  editdrawing.xpm  gen_dibuild_cc
perl/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
perl/Metno-Bdiana/: Bdiana.xs  Changes  HACKS  MANIFEST  Makefile.PL  Makefile.PL.in  README  control
share/: CMakeLists.txt
share/applications/: metno-diana-TEST.desktop  metno-diana-test.desktop  metno-diana-versioned.desktop.in  metno-diana.desktop  metno-diana.desktop.in  metno-dianaTEST.desktop
share/diana/: CAP-v1.2.xsd  CMakeLists.txt  UALF_diana.header  UK_lyn.header  amdar.stations  diana.mk  felt_variables_hirlam12.xml  iptab_metar.txt  iptab_synop.txt  itab_metar.txt  itab_synop.txt  jason_swh.header  obsflag.html  priList.txt  printer.def  radiofyr.txt
share/doc/: CMakeLists.txt  bdiana.1.in  diana.1.in
share/examples/: README  bdiana.input  bdiana.tcp.input  bdiana.tcp64.input
src/: CMakeLists.txt  Makefile  Makefile.am  MovieMaker.cc  MovieMaker.h  PolyContouring.cc  PolyContouring.h  QImagePNGWriter.cc  QImagePNGWriter.h  Robot.xpm  Tool_32_draw.xpm  active_object.xpm  addempty.xpm  apply.xpm  autoupdate_off.xpm  autoupdate_on.xpm  autoupdate_red.xpm  autoupdate_warn.xpm  autoupdate_yellow.xpm  back.xpm  bdiana.cc  bdiana_capi.cc  bdiana_capi.h  bdiana_graphics.cc  bdiana_graphics.h  bdiana_main.cc  bdiana_main.h  bdiana_source.cc  bdiana_source.h  bdiana_spectrum.cc  bdiana_spectrum.h  bdiana_vcross.cc  bdiana_vcross.h  bdiana_vprof.cc  bdiana_vprof.h  blocks.xpm  bookmark.xpm  clock.xpm  convert.xpm  custom_user.xpm  (+715 more)
src/EditItems/: activelayerspane.cc  activelayerspane.h  dialog.cc  dialog.h  dialogcommon.cc  dialogcommon.h  drawingcomposite.cc  drawingcomposite.h  drawingdialog.cc  drawingdialog.h  drawingitembase.cc  drawingitembase.h  drawinglayerspane.cc  drawinglayerspane.h  drawingpolyline.cc  drawingpolyline.h  drawingstylemanager.cc  drawingstylemanager.h  drawingsymbol.cc  drawingsymbol.h  drawingtext.cc  drawingtext.h  drawingweatherarea.cc  drawingweatherarea.h  editcomposite.cc  editcomposite.h  editdrawingdialog.cc  editdrawingdialog.h  editdrawinglayerspane.cc  editdrawinglayerspane.h  edititembase.cc  edititembase.h  editpolyline.cc  editpolyline.h  editsymbol.cc  editsymbol.h  edittext.cc  edittext.h  eimtestdialog.cc  eimtestdialog.h  (+36 more)
src/GL/: paintgl.cc  paintgl.h
src/PaintGL/: paintgl.cc  paintgl.h
src/diField/: CachedGridIO.cc  CachedGridIO.h  DataReshape.cc  DataReshape.h  FimexIO.cc  FimexIO.h  FimexSource.cc  FimexSource.h  GridCollection.cc  GridCollection.h  GridDataKey.h  GridIO.cc  GridIO.h  GridIOBase.cc  GridIOBase.h  GridIOsetup.cc  GridIOsetup.h  GridInventoryTypes.cc  GridInventoryTypes.h  Makefile.am  TimeFilter.cc  TimeFilter.h  VcrossData.cc  VcrossData.h  VcrossSource.cc  VcrossSource.h  VcrossUtil.cc  VcrossUtil.h  diArea.cc  diArea.h  diCommonFieldTypes.cc  diCommonFieldTypes.h  diField.cc  diField.h  diFieldCache.cc  diFieldCache.h  diFieldCacheEntity.cc  diFieldCacheEntity.h  diFieldCacheKeyset.cc  diFieldCacheKeyset.h  (+31 more)
src/export/: DianaImageSource.cc  DianaImageSource.h  ExportUtil.cc  ExportUtil.h  ImageSink.cc  ImageSink.h  ImageSource.cc  ImageSource.h  MovieMaker.cc  MovieMaker.h  PaintGLImageSource.cc  PaintGLImageSource.h  PaintableImageSource.cc  PaintableImageSource.h  PdfSink.cc  PdfSink.h  PrinterDialog.cc  PrinterDialog.h  QPictureSink.cc  QPictureSink.h  RasterFileSink.cc  RasterFileSink.h  SvgFileSink.cc  SvgFileSink.h  VcrossImageSource.cc  VcrossImageSource.h  export_image_dialog.ui  export_image_preview.ui  qtDianaDevicePainter.cc  qtDianaDevicePainter.h  qtExportImageDialog.cc  qtExportImageDialog.h  qtExportImagePreview.cc  qtExportImagePreview.h  qtTempDir.cc  qtTempDir.h
src/miRaster/: ImageCache.cpp  ImageCache.h  Makefile.am  satgeotiff.cc  satgeotiff.h  satimg.cc  satimg.h  satimg_mitiff.cc  satimg_mitiff.h  satimgh5.cc  satimgh5.h  satimgh5_sattemp.h
src/service/: diGRPCUtils.cc  diGRPCUtils.h  diObsGRPCServiceDecls.h  diObsGRPCServiceUtils.cc  diObsGRPCServiceUtils.h  diObsGRPCUtils.cc  diObsGRPCUtils.h  diObsService.cc  diObsService.h  diana_obs_v0.proto  diana_obs_v0_svc.proto  main_obs.cc
src/test/: Makefile.am  SvgContouring.cc  TestDianaLevels.cc  TestPlotOptions.cc  TestPoint.cc  TestQuickMenues.cc  TestSvgContouring  TestUtilities.cc  TestVcrossComputer.cc  TestVcrossQtManager.cc  TestVcrossQtManager.h  TestVcrossQuickmenues.cc  TestVcrossQuickmenues.h  TestVprofData.cc  TestWebMap.cc  arome_20150201_12_vc.nc  arome_20150202_06_vc.nc  arome_vprof.nc  bangladesh_vc.nc
src/util/: charsets.cc  charsets.h  debug_timer.cc  debug_timer.h  diKeyValue.cc  diKeyValue.h  diLineMerger.cc  diLineMerger.h  diUnitsConverter.cc  diUnitsConverter.h  fimex_logging.cc  fimex_logging.h  format_int.cc  format_int.h  geo_util.cc  geo_util.h  lru_cache.h  math_util.cc  math_util.h  misc_util.h  nearest_element.h  openmp_tools.cc  openmp_tools.h  pair_hash.h  plotoptions_util.cc  plotoptions_util.h  polygon_util.cc  polygon_util.h  qstring_util.cc  (+15 more)
test/: CMakeLists.txt  DataReshapeTest.cc  FieldFunctionsTest.cc  FieldManagerTest.cc  FieldPlotManagerTest.cc  FimexSourceTest.cc  FlightLevelTest.cc  GridConverterTest.cc  Makefile.am  MetConstantsTest.cc  ProjectionTest.cc  RectangleTest.cc  ShapeTest.cc  TestAnyDoubleSpinBox.cc  TestArea.cc  TestCommandParser.cc  TestDianaLevels.cc  TestFieldDialog.cc  TestFieldPlot.cc  TestFieldUtil.cc  TestGLPainter.cc  TestGridIO.cc  TestImageIO.cc  TestLogFileIO.cc  TestObsDataRotated.cc  TestObsDataUnion.cc  TestObsReaderAscii.cc  TestObsReaderBufr.cc  TestObsReaderFile.cc  TestObsReaderTimeInterval.cc  TestPdfSink.cc  TestPlotCommands.cc  TestPlotOptions.cc  TestPlotStatus.cc  TestQuickMenues.cc  TestReversibleList.cc  TestSatDialog.cc  TestSatImg.cc  TestSetupParser.cc  TestUnitsConverter.cc  (+42 more)
trunk/: Makefile.am  README  configure.ac  diana.mk
(+1089 files in other folders)
